# llm-static-code-analyzer

./: .gitignore  README.md  pyproject.toml
analysis/: test_analysis.ipynb
analysis/results/csharp/: test_cases_iter_0_results.csv  test_cases_iter_10_results.csv  test_cases_iter_11_results.csv  test_cases_iter_12_results.csv  test_cases_iter_13_results.csv  test_cases_iter_14_results.csv  test_cases_iter_1_results.csv  test_cases_iter_2_results.csv  test_cases_iter_3_results.csv  test_cases_iter_4_results.csv  test_cases_iter_5_results.csv  test_cases_iter_6_results.csv  test_cases_iter_7_results.csv  test_cases_iter_8_results.csv  test_cases_iter_9_results.csv
analysis/results/php/: test_cases_iter_0_results.csv  test_cases_iter_10_results.csv  test_cases_iter_11_results.csv  test_cases_iter_12_results.csv  test_cases_iter_13_results.csv  test_cases_iter_14_results.csv  test_cases_iter_1_results.csv  test_cases_iter_2_results.csv  test_cases_iter_3_results.csv  test_cases_iter_4_results.csv  test_cases_iter_5_results.csv  test_cases_iter_6_results.csv  test_cases_iter_7_results.csv  test_cases_iter_8_results.csv  test_cases_iter_9_results.csv  (+1 more)
analysis/tikz/: real_accuracy_distribution.tex  real_accuracy_distribution_general.tex  relaxed_accuracy_distribution.tex  weakness_accuracy_bar.tex  weakness_accuracy_per_iteration.tex  xmr_chart.tex
src/: app.py  core.py  cwes.py  file.py  github_fetch.py  llm_evaluator.py  styler.py  system_prompt.py  test_case_data_load.py  test_cases.py  test_configuration.py  test_core.py  zip_processor.py
